// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Collaboration/Invitation Invite 1`] = `
<div
  className="Story-sc-1e4b0ke-0 hwwcpR"
>
  <div>
    <div
      className="Invitationstories__PopperStory-bvp40k-0 bSqzxb"
    >
      <div
        className="Popper__PopperBody-sc-5y9oyp-5 cpDOxp"
      >
        <div
          className="InvitationPopper__ShareProjectHeader-sc-1rnc0bb-0 gnnNKu"
        >
          <div
            className="InvitationPopper__ShareProjectTitle-sc-1rnc0bb-1 dQDMaM"
          >
            Share Project
          </div>
          <div
            className="sc-iTVIwl fqGxrZ"
          >
            <button
              className="sc-ezzayL sc-hiKfjK cRSqLN ktDLLB"
              onClick={[Function]}
              type="button"
            >
              Link
            </button>
            <button
              className="sc-ezzayL sc-hiKfjK cRSqLN iLoAvh"
              selected={true}
              type="button"
            >
              Invite
            </button>
          </div>
        </div>
        <form
          action="#"
          noValidate={true}
          onReset={[Function]}
          onSubmit={[Function]}
        >
          <div
            className="sc-eCApGN bRvWwx"
          >
            <input
              className="sc-dlnjPT iOeyAw"
              disabled={false}
              name="name"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="name"
              required={true}
              type="text"
              value=""
            />
            <input
              className="sc-dlnjPT iOeyAw"
              disabled={false}
              name="email"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="email"
              required={true}
              type="email"
              value=""
            />
          </div>
          <div
            className="InvitationForm__RadioButtonsContainer-jwjlou-1 fhxMEU"
          >
            <div
              className="RadioButton__Control-sc-1hx5u6i-1 gmttHo"
            >
              <input
                checked={false}
                className="sc-fuIRbl jLsvIs"
                disabled={false}
                id="owner"
                name="role"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                required={true}
                type="radio"
                value="Owner"
              />
              <label
                htmlFor="owner"
              >
                Owner
                <p
                  className="RadioButton__TextHint-sc-1hx5u6i-0 fwduZw"
                >
                  Can modify and delete project, invite and remove collaborators
                </p>
              </label>
            </div>
            <div
              className="RadioButton__Control-sc-1hx5u6i-1 gmttHo"
            >
              <input
                checked={true}
                className="sc-fuIRbl jLsvIs"
                disabled={false}
                id="writer"
                name="role"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                required={true}
                type="radio"
                value="Writer"
              />
              <label
                htmlFor="writer"
              >
                Writer
                <p
                  className="RadioButton__TextHint-sc-1hx5u6i-0 fwduZw"
                >
                  Can modify project contents
                </p>
              </label>
            </div>
            <div
              className="RadioButton__Control-sc-1hx5u6i-1 gmttHo"
            >
              <input
                checked={false}
                className="sc-fuIRbl jLsvIs"
                disabled={false}
                id="viewer"
                name="role"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                required={true}
                type="radio"
                value="Viewer"
              />
              <label
                htmlFor="viewer"
              >
                Viewer
                <p
                  className="RadioButton__TextHint-sc-1hx5u6i-0 fwduZw"
                >
                  Can only review projects without modifying it
                </p>
              </label>
            </div>
          </div>
          <button
            className="sc-ezzayL sc-kLokih InvitationForm__SendInvitationButton-jwjlou-0 cRSqLN bYa-DYT ekcIem"
            disabled={false}
            type="submit"
          >
            Send Invitation
          </button>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Collaboration/Invitation Invite: not owner 1`] = `
<div
  className="Story-sc-1e4b0ke-0 hwwcpR"
>
  <div>
    <div
      className="Invitationstories__PopperStory-bvp40k-0 bSqzxb"
    >
      <div
        className="Popper__PopperBody-sc-5y9oyp-5 cpDOxp"
      >
        <div
          className="InvitationPopper__ShareProjectHeader-sc-1rnc0bb-0 gnnNKu"
        >
          <div
            className="InvitationPopper__ShareProjectTitle-sc-1rnc0bb-1 dQDMaM"
          >
            Share Project
          </div>
          <div
            className="sc-iTVIwl fqGxrZ"
          >
            <button
              className="sc-ezzayL sc-hiKfjK cRSqLN ktDLLB"
              onClick={[Function]}
              type="button"
            >
              Link
            </button>
            <button
              className="sc-ezzayL sc-hiKfjK cRSqLN iLoAvh"
              selected={true}
              type="button"
            >
              Invite
            </button>
          </div>
        </div>
        <form
          action="#"
          noValidate={true}
          onReset={[Function]}
          onSubmit={[Function]}
        >
          <div
            className="InvitationForm__AlertMessageContainer-jwjlou-2 cfuuFo"
          >
            <div
              className="sc-eKYRpg sc-hOPghE iOXcUE ejfhxV alert-message"
            >
              <div
                className="sc-hmbsMR jcsba-d"
              >
                <div
                  className="sc-jOFreG gmbONa"
                >
                  <svg
                    height={24}
                    viewBox="0 0 24 24"
                    width={24}
                  >
                    <path
                      d="M12 22.5c5.799 0 10.5-4.701 10.5-10.5S17.799 1.5 12 1.5 1.5 6.201 1.5 12 6.2 22.5 12 22.5zm0 1.5c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.372 12 12 12zm0-16a1 1 0 110-2 1 1 0 010 2zm.02 10.2a.9.9 0 01-.9-.9v-7.2a.9.9 0 111.8 0v7.2a.9.9 0 01-.9.9z"
                      fill="#1A9BC7"
                      fillRule="evenodd"
                    />
                  </svg>
                </div>
                <div
                  className="sc-daBvwG ETUjy"
                >
                  Only project owners can invite others to the project.
                </div>
              </div>
            </div>
          </div>
          <div
            className="sc-eCApGN bRvWwx"
          >
            <input
              className="sc-dlnjPT iOeyAw"
              disabled={true}
              name="name"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="name"
              required={true}
              type="text"
              value=""
            />
            <input
              className="sc-dlnjPT iOeyAw"
              disabled={true}
              name="email"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="email"
              required={true}
              type="email"
              value=""
            />
          </div>
          <div
            className="InvitationForm__RadioButtonsContainer-jwjlou-1 fhxMEU"
          >
            <div
              className="RadioButton__Control-sc-1hx5u6i-1 gmttHo"
            >
              <input
                checked={false}
                className="sc-fuIRbl jLsvIs"
                disabled={true}
                id="owner"
                name="role"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                required={true}
                type="radio"
                value="Owner"
              />
              <label
                htmlFor="owner"
              >
                Owner
                <p
                  className="RadioButton__TextHint-sc-1hx5u6i-0 fwduZw"
                >
                  Can modify and delete project, invite and remove collaborators
                </p>
              </label>
            </div>
            <div
              className="RadioButton__Control-sc-1hx5u6i-1 gmttHo"
            >
              <input
                checked={true}
                className="sc-fuIRbl jLsvIs"
                disabled={true}
                id="writer"
                name="role"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                required={true}
                type="radio"
                value="Writer"
              />
              <label
                htmlFor="writer"
              >
                Writer
                <p
                  className="RadioButton__TextHint-sc-1hx5u6i-0 fwduZw"
                >
                  Can modify project contents
                </p>
              </label>
            </div>
            <div
              className="RadioButton__Control-sc-1hx5u6i-1 gmttHo"
            >
              <input
                checked={false}
                className="sc-fuIRbl jLsvIs"
                disabled={true}
                id="viewer"
                name="role"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                required={true}
                type="radio"
                value="Viewer"
              />
              <label
                htmlFor="viewer"
              >
                Viewer
                <p
                  className="RadioButton__TextHint-sc-1hx5u6i-0 fwduZw"
                >
                  Can only review projects without modifying it
                </p>
              </label>
            </div>
          </div>
          <button
            className="sc-ezzayL sc-kLokih InvitationForm__SendInvitationButton-jwjlou-0 gjhYjP bYa-DYT ekcIem"
            disabled={true}
            type="submit"
          >
            Send Invitation
          </button>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Collaboration/Invitation Share Link: copied 1`] = `
<div
  className="Story-sc-1e4b0ke-0 hwwcpR"
>
  <div>
    <div
      className="Invitationstories__PopperStory-bvp40k-0 bSqzxb"
    >
      <div
        className="Popper__PopperBody-sc-5y9oyp-5 cpDOxp"
      >
        <div
          className="InvitationPopper__ShareProjectHeader-sc-1rnc0bb-0 gnnNKu"
        >
          <div
            className="InvitationPopper__ShareProjectTitle-sc-1rnc0bb-1 dQDMaM"
          >
            Share Project
          </div>
          <div
            className="sc-iTVIwl fqGxrZ"
          >
            <button
              className="sc-ezzayL sc-hiKfjK cRSqLN iLoAvh"
              selected={true}
              type="button"
            >
              Link
            </button>
            <button
              className="sc-ezzayL sc-hiKfjK cRSqLN ktDLLB"
              onClick={[Function]}
              type="button"
            >
              Invite
            </button>
          </div>
        </div>
        <div
          className="ShareURIPopper__AlertMessageContainer-op6w1f-1 lddEhr"
        >
          <div
            className="sc-eKYRpg sc-bTDODP iOXcUE jhuEGn alert-message"
          >
            <div
              className="sc-hmbsMR jcsba-d"
            >
              <div
                className="sc-jOFreG gmbONa"
              >
                <svg
                  className="sc-jUfxsr ezMBTZ"
                  height={32}
                  viewBox="0 0 32 32"
                  width={32}
                >
                  <defs>
                    <clipPath
                      clipPathUnits="userSpaceOnUse"
                      id="svg-successgreen-a"
                    >
                      <path
                        clipRule="evenodd"
                        d="M12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.372 12 12 12zm0-1.5c5.799 0 10.5-4.701 10.5-10.5S17.799 1.5 12 1.5 1.5 6.201 1.5 12 6.2 22.5 12 22.5zm4.517-7.334l-5.39-4.976-2.296 2.171c-.342.324-.86.369-1.248.14l-.09-.059-.06-.088a.951.951 0 01.17-1.194l2.837-2.665a1.08 1.08 0 011.46 0l5.89 5.502c.342.32.39.808.153 1.176l-.063.086-.092.057c-.4.22-.925.17-1.271-.15zm-8.93-2.618l-.198-.194.092.079.012.009.01.012.083.094zm10.198 2.812a.988.988 0 00.086-.09l.009-.011.014-.01.098-.08-.207.191z"
                      />
                    </clipPath>
                    <clipPath
                      clipPathUnits="userSpaceOnUse"
                      id="svg-successgreen-b"
                    >
                      <path
                        d="M0 0h24v24H0z"
                      />
                    </clipPath>
                    <clipPath
                      clipPathUnits="userSpaceOnUse"
                      id="svg-successgreen-c"
                    >
                      <path
                        d="M-15-16h54v55h-54z"
                      />
                    </clipPath>
                    <clipPath
                      clipPathUnits="userSpaceOnUse"
                      id="svg-successgreen-d"
                    >
                      <path
                        d="M0 0h24v24H0z"
                      />
                    </clipPath>
                  </defs>
                  <g
                    clipPath="url(#svg-successgreen-a)"
                    transform="matrix(1.33333 0 0 -1.33333 0 32)"
                  >
                    <g
                      clipPath="url(#svg-successgreen-b)"
                    >
                      <g
                        clipPath="url(#svg-successgreen-c)"
                      >
                        <g
                          clipPath="url(#svg-successgreen-d)"
                        >
                          <path
                            d="M12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.372 12 12 12zm0-1.5c5.799 0 10.5-4.701 10.5-10.5S17.799 1.5 12 1.5 1.5 6.201 1.5 12 6.2 22.5 12 22.5zm4.517-7.334l-5.39-4.976-2.296 2.171c-.342.324-.86.369-1.248.14l-.09-.059-.06-.088a.951.951 0 01.17-1.194l2.837-2.665a1.08 1.08 0 011.46 0l5.89 5.502c.342.32.39.808.153 1.176l-.063.086-.092.057c-.4.22-.925.17-1.271-.15zm-8.93-2.618l-.198-.194.092.079h0l.012.009.01.012h0l.083.094zm10.198 2.812a.988.988 0 00.086-.09l.009-.011.014-.01h0l.098-.08z"
                            fill="none"
                            stroke="#36b260"
                            strokeMiterlimit={10}
                            strokeWidth={3}
                          />
                        </g>
                      </g>
                    </g>
                  </g>
                </svg>
              </div>
              <div
                className="sc-daBvwG ETUjy"
              >
                Link copied to clipboard.
              </div>
              <button
                className="sc-ezzayL sc-jJMGHv sc-jHNhIU cRSqLN qAimf GPWUb"
                onClick={[Function]}
                type="button"
              >
                OK
              </button>
            </div>
          </div>
        </div>
        <span
          className="ShareURIPopper__MiniText-op6w1f-2 jPGhOX"
        >
          Anyone with the link can join as:
        </span>
        <div
          className="RadioButton__Control-sc-1hx5u6i-1 gmttHo"
        >
          <input
            checked={true}
            className="sc-fuIRbl jLsvIs"
            disabled={true}
            id="writer"
            name="role"
            onChange={[Function]}
            type="radio"
            value="Writer"
          />
          <label
            htmlFor="writer"
          >
            Writer
            <p
              className="RadioButton__TextHint-sc-1hx5u6i-0 fwduZw"
            >
              Can modify project contents
            </p>
          </label>
        </div>
        <div
          className="RadioButton__Control-sc-1hx5u6i-1 gmttHo"
        >
          <input
            checked={false}
            className="sc-fuIRbl jLsvIs"
            disabled={true}
            id="viewer"
            name="role"
            onChange={[Function]}
            type="radio"
            value="Viewer"
          />
          <label
            htmlFor="viewer"
          >
            Viewer
            <p
              className="RadioButton__TextHint-sc-1hx5u6i-0 fwduZw"
            >
              Can only review projects without modifying it
            </p>
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Collaboration/Invitation Share Link: error 1`] = `
<div
  className="Story-sc-1e4b0ke-0 hwwcpR"
>
  <div>
    <div
      className="Invitationstories__PopperStory-bvp40k-0 bSqzxb"
    >
      <div
        className="Popper__PopperBody-sc-5y9oyp-5 cpDOxp"
      >
        <div
          className="InvitationPopper__ShareProjectHeader-sc-1rnc0bb-0 gnnNKu"
        >
          <div
            className="InvitationPopper__ShareProjectTitle-sc-1rnc0bb-1 dQDMaM"
          >
            Share Project
          </div>
          <div
            className="sc-iTVIwl fqGxrZ"
          >
            <button
              className="sc-ezzayL sc-hiKfjK cRSqLN iLoAvh"
              selected={true}
              type="button"
            >
              Link
            </button>
            <button
              className="sc-ezzayL sc-hiKfjK cRSqLN ktDLLB"
              onClick={[Function]}
              type="button"
            >
              Invite
            </button>
          </div>
        </div>
        <div
          className="ShareURIPopper__AlertMessageContainer-op6w1f-1 lddEhr"
        >
          <div
            className="sc-eKYRpg sc-kHWWFa iOXcUE loOVdQ alert-message"
          >
            <div
              className="sc-hmbsMR jcsba-d"
            >
              <div
                className="sc-jOFreG gmbONa"
              >
                <svg
                  height={24}
                  viewBox="0 0 24 24"
                  width={24}
                >
                  <path
                    d="M12 1.5c5.799 0 10.5 4.701 10.5 10.5S17.799 22.5 12 22.5 1.5 17.799 1.5 12 6.2 1.5 12 1.5zM12 0c6.627 0 12 5.373 12 12s-5.373 12-12 12S0 18.627 0 12 5.372 0 12 0zm0 16.2a1 1 0 100 2 1 1 0 000-2zM12.02 6a.9.9 0 00-.9.9v7.2a.9.9 0 101.8 0V6.9a.9.9 0 00-.9-.9z"
                    fill="#F35143"
                    fillRule="evenodd"
                  />
                </svg>
              </div>
              <div
                className="sc-daBvwG ETUjy"
              >
                Retrieving sharing link failed.
              </div>
              <button
                className="sc-ezzayL sc-jJMGHv sc-jHNhIU cRSqLN qAimf GPWUb"
                onClick={[Function]}
                type="button"
              >
                Retry
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Collaboration/Invitation Share Link: loaded 1`] = `
<div
  className="Story-sc-1e4b0ke-0 hwwcpR"
>
  <div>
    <div
      className="Invitationstories__PopperStory-bvp40k-0 bSqzxb"
    >
      <div
        className="Popper__PopperBody-sc-5y9oyp-5 cpDOxp"
      >
        <div
          className="InvitationPopper__ShareProjectHeader-sc-1rnc0bb-0 gnnNKu"
        >
          <div
            className="InvitationPopper__ShareProjectTitle-sc-1rnc0bb-1 dQDMaM"
          >
            Share Project
          </div>
          <div
            className="sc-iTVIwl fqGxrZ"
          >
            <button
              className="sc-ezzayL sc-hiKfjK cRSqLN iLoAvh"
              selected={true}
              type="button"
            >
              Link
            </button>
            <button
              className="sc-ezzayL sc-hiKfjK cRSqLN ktDLLB"
              onClick={[Function]}
              type="button"
            >
              Invite
            </button>
          </div>
        </div>
        <div
          className="ShareURIPopper__URIFieldContainer-op6w1f-0 eKybAj"
        >
          <input
            className="sc-dlnjPT iOeyAw"
            disabled={true}
            name="url"
            style={
              Object {
                "backgroundColor": "white",
              }
            }
            type="text"
            value="http://example.com"
          />
          <button
            className="sc-ezzayL sc-bYwzba cRSqLN bXiklN"
            onClick={[Function]}
            type="button"
          >
            COPY
          </button>
        </div>
        <span
          className="ShareURIPopper__MiniText-op6w1f-2 jPGhOX"
        >
          Anyone with the link can join as:
        </span>
        <div
          className="RadioButton__Control-sc-1hx5u6i-1 gmttHo"
        >
          <input
            checked={true}
            className="sc-fuIRbl jLsvIs"
            disabled={false}
            id="writer"
            name="role"
            onChange={[Function]}
            type="radio"
            value="Writer"
          />
          <label
            htmlFor="writer"
          >
            Writer
            <p
              className="RadioButton__TextHint-sc-1hx5u6i-0 fwduZw"
            >
              Can modify project contents
            </p>
          </label>
        </div>
        <div
          className="RadioButton__Control-sc-1hx5u6i-1 gmttHo"
        >
          <input
            checked={false}
            className="sc-fuIRbl jLsvIs"
            disabled={false}
            id="viewer"
            name="role"
            onChange={[Function]}
            type="radio"
            value="Viewer"
          />
          <label
            htmlFor="viewer"
          >
            Viewer
            <p
              className="RadioButton__TextHint-sc-1hx5u6i-0 fwduZw"
            >
              Can only review projects without modifying it
            </p>
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Collaboration/Invitation Share Link: loading 1`] = `
<div
  className="Story-sc-1e4b0ke-0 hwwcpR"
>
  <div>
    <div
      className="Invitationstories__PopperStory-bvp40k-0 bSqzxb"
    >
      <div
        className="Popper__PopperBody-sc-5y9oyp-5 cpDOxp"
      >
        <div
          className="InvitationPopper__ShareProjectHeader-sc-1rnc0bb-0 gnnNKu"
        >
          <div
            className="InvitationPopper__ShareProjectTitle-sc-1rnc0bb-1 dQDMaM"
          >
            Share Project
          </div>
          <div
            className="sc-iTVIwl fqGxrZ"
          >
            <button
              className="sc-ezzayL sc-hiKfjK cRSqLN iLoAvh"
              selected={true}
              type="button"
            >
              Link
            </button>
            <button
              className="sc-ezzayL sc-hiKfjK cRSqLN ktDLLB"
              onClick={[Function]}
              type="button"
            >
              Invite
            </button>
          </div>
        </div>
        <div>
          Thinking...
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Collaboration/Invitation Share Link: not owner 1`] = `
<div
  className="Story-sc-1e4b0ke-0 hwwcpR"
>
  <div>
    <div
      className="Invitationstories__PopperStory-bvp40k-0 bSqzxb"
    >
      <div
        className="Popper__PopperBody-sc-5y9oyp-5 cpDOxp"
      >
        <div
          className="InvitationPopper__ShareProjectHeader-sc-1rnc0bb-0 gnnNKu"
        >
          <div
            className="InvitationPopper__ShareProjectTitle-sc-1rnc0bb-1 dQDMaM"
          >
            Share Project
          </div>
          <div
            className="sc-iTVIwl fqGxrZ"
          >
            <button
              className="sc-ezzayL sc-hiKfjK cRSqLN iLoAvh"
              selected={true}
              type="button"
            >
              Link
            </button>
            <button
              className="sc-ezzayL sc-hiKfjK cRSqLN ktDLLB"
              onClick={[Function]}
              type="button"
            >
              Invite
            </button>
          </div>
        </div>
        <div
          className="ShareURIPopper__AlertMessageContainer-op6w1f-1 lddEhr"
        >
          <div
            className="sc-eKYRpg sc-hOPghE iOXcUE ejfhxV alert-message"
          >
            <div
              className="sc-hmbsMR jcsba-d"
            >
              <div
                className="sc-jOFreG gmbONa"
              >
                <svg
                  height={24}
                  viewBox="0 0 24 24"
                  width={24}
                >
                  <path
                    d="M12 22.5c5.799 0 10.5-4.701 10.5-10.5S17.799 1.5 12 1.5 1.5 6.201 1.5 12 6.2 22.5 12 22.5zm0 1.5c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.372 12 12 12zm0-16a1 1 0 110-2 1 1 0 010 2zm.02 10.2a.9.9 0 01-.9-.9v-7.2a.9.9 0 111.8 0v7.2a.9.9 0 01-.9.9z"
                    fill="#1A9BC7"
                    fillRule="evenodd"
                  />
                </svg>
              </div>
              <div
                className="sc-daBvwG ETUjy"
              >
                Only project owners can share links to the document.
              </div>
            </div>
          </div>
        </div>
        <span
          className="ShareURIPopper__MiniText-op6w1f-2 jPGhOX"
        >
          Anyone with the link can join as:
        </span>
        <div
          className="RadioButton__Control-sc-1hx5u6i-1 gmttHo"
        >
          <input
            checked={true}
            className="sc-fuIRbl jLsvIs"
            disabled={true}
            id="writer"
            name="role"
            onChange={[Function]}
            type="radio"
            value="Writer"
          />
          <label
            htmlFor="writer"
          >
            Writer
            <p
              className="RadioButton__TextHint-sc-1hx5u6i-0 fwduZw"
            >
              Can modify project contents
            </p>
          </label>
        </div>
        <div
          className="RadioButton__Control-sc-1hx5u6i-1 gmttHo"
        >
          <input
            checked={false}
            className="sc-fuIRbl jLsvIs"
            disabled={true}
            id="viewer"
            name="role"
            onChange={[Function]}
            type="radio"
            value="Viewer"
          />
          <label
            htmlFor="viewer"
          >
            Viewer
            <p
              className="RadioButton__TextHint-sc-1hx5u6i-0 fwduZw"
            >
              Can only review projects without modifying it
            </p>
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Collaboration/Invitation Share Project Button 1`] = `
<div
  className="Story-sc-1e4b0ke-0 hwwcpR"
>
  <div>
    <div
      className="ShareProjectButton__Container-dtoiwn-0 YPEIW"
      onClick={[Function]}
    >
      <div
        className="sc-gIvpCV isESLn"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <button
          aria-label="Share project"
          className="sc-ezzayL sc-cBoprd sc-ciSmjq ShareProjectButton__ShareIconButton-dtoiwn-1 cRSqLN cPWUwg ifa-DBT mdOcx"
          onClick={[Function]}
          size={24}
          type="button"
        >
          <svg
            height={22}
            viewBox="0 0 16 22"
            width={16}
          >
            <g
              fill="none"
              fillRule="evenodd"
              transform="translate(0 1)"
            >
              <path
                d="M13.5 5.5a2 2 0 012 2v11a2 2 0 01-2 2h-11a2 2 0 01-2-2v-11a2 2 0 012-2h1.78c.494.044.742.293.742.747 0 .456-.25.705-.751.747l-.087.004h7.627l-.064-.002c-.45-.037-.694-.249-.731-.635l-.006-.11c0-.456.246-.706.737-.751H13.5zm-1.487 1.498h-.202l.043.002H3a1 1 0 00-.993.883L2 8v10a1 1 0 001 1h10a1 1 0 001-1V8a1 1 0 00-1-1l-1.08.001.093-.003zm-7.829 0H4l.14.003.044-.003z"
                fill="#1A9BC7"
              />
              <rect
                fill="#1A9BC7"
                height={14}
                rx={0.75}
                width={1.5}
                x={7.25}
                y={1}
              />
              <path
                d="M4.994 3.012L8.01.384l3.015 2.628"
                stroke="#1A9BC7"
                strokeLinecap="round"
                strokeWidth={1.5}
              />
            </g>
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;
